<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SOSMsg</string>
    <string name="action_settings">Settings</string>
    <string name="title_myself">Myself</string>
    <string name="title_related">Related</string>
    <string name="string_your_name">Your Name</string>
    <string name="string_message">Message</string>
    <string name="string_include_gps_position">Include GPS Position</string>
    <string name="string_update">Update</string>
    
    <string name="string_status">Status</string>
    <string-array name="status_array">
        <item>HELP ME!</item>
        <item>Need Supply</item>
        <item>Rescued</item>
    </string-array>
    
    <string name="string_help_me">HELP ME!</string>
    <string name="string_need_supply">Need Supply</string>
    <string name="string_rescued">Rescued</string>
    <string name="string_message_updated">Message Updated</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="string_message_count">%d messages loaded</string>
</resources>
