<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/send_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:text="@string/string_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:entries="@array/status_array"
            android:prompt="@string/string_status" />
    </LinearLayout>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_your_name"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/string_message"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/includeGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_include_gps_position" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_update"
        android:onClick="updateMessage" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>